<resources>
    <string name="app_name">DCourseManager</string>
    <string name="MianTable_H_1_0">一月</string>
    <string name="MianTable_H_1_1">周一</string>
    <string name="MianTable_H_1_2">周二</string>
    <string name="MianTable_H_1_3">周三</string>
    <string name="MianTable_H_1_4">周四</string>
    <string name="MianTable_H_1_5">周五</string>
    <string name="MianTable_H_1_6">周六</string>
    <string name="MianTable_H_1_7">周日</string>
    <string name="Help">Help</string>
    <string name="Intent_week">week</string>
    <string name="Intent_weekNum">weekNum</string>
    <string name="Intent_courseNum">courseNum</string>
    <string name="Intent_courseName">courseName</string>
    <string name="Intent_SubjectId">Subject</string>

    <!--setTag的Key-->
    <item type="id" name="tag_postion"></item>
    <item type="id" name="tag_Holder"></item>
    <item type="id" name="tag_term_num"></item>
    <item type="id" name="tag_week_num"></item>
    <item type="id" name="tag_course_num"></item>
    <item type="id" name="tag_course"></item>
</resources>
