<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/MainTable_Head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="当前周:"/>
        <EditText
            android:id="@+id/MainTable_WeekNow"
            android:layout_width="64dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/MainTable_B_Jump2Week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="查找"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/app_name500"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/MainTable_BodyHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainTable_Head"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/MainTable_month"
            android:layout_width="32dp"
            android:gravity="center"
            android:layout_height="@dimen/MainTable_H_height"
            android:text="@string/MianTable_H_1_0" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_1"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_2"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_3"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_4"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_5"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_6"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/MainTable_H_height"
            android:gravity="center"
            android:text="@string/MianTable_H_1_7"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/MainTable_List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/MainTable_BodyHead"
        android:layout_above="@id/MainTable_Bar"
        android:background="@mipmap/table_background2">
    </ListView>
    <LinearLayout
        android:id="@+id/MainTable_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/MainTable_B_AddCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="添加课程"/>
        <Button
            android:id="@+id/MainTable_B_SeeCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="查看课程"/>
        <Button
            android:id="@+id/MainTable_B_Alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="闹钟"/>
    </LinearLayout>

</RelativeLayout>